tests/NormalTests/paczka1/fuzzy1/60686078.err
Error in line 13: An1PqN A635 64,0
Error in line 14: hM3plL S92 40,5
Error in line 27: S92 S266 88,6
Error in line 30: S92 S92 16,4
Error in line 29: 9fEx A22 15,3
